[package]
name = "libwinit"
version = "0.5.0"
authors = ["Aliaksei Syrel <alex.syrel@gmail.com>"]
edition = "2021"

[lib]
name = "Winit"
crate-type = ["cdylib"]

[features]
phlow = [ "dep:phlow", "phlow-extensions", "value-box-ffi/phlow", "phlow-ffi" ]

[dependencies]
winit = { version = "0.28.1", features = [ "android-native-activity" ] }
raw-window-handle = "0.5"
raw-window-handle-extensions = "0.5"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
parking_lot = "0.12"
# value-box support
value-box = "2.3"
geometry-box = "1.0"
string-box = "1.1"
value-box-ffi = { version = "1.1", features = [ "geometry-box", "string-box"] }
# phlow support
phlow = { version = "1.3", optional = true, features = [ "phlow-derive" ] }
phlow-extensions = { version = "1.3", optional = true }
phlow-ffi = { version = "1.1", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[build-dependencies]
cfg_aliases = "0.1"